--- a/login.css
+++ b/login.css
@@ -16,7 +16,7 @@
     
 }
 
-.login-container--fb-button{
+.login-container__fb-button{
    width: 450px;
    height: 48px;
    border: none;
@@ -28,16 +28,16 @@
    margin-top: 60px ;
    position: relative;
 }
-.login-container--fb-button p, .login-container--google-button p{
+.login-container__fb-button p, .login-container__google-button p{
     position: absolute;
     top: 14%;
     left: 29%;
 }
-.login-container--fb-button p img, .login-container--google-button p img{
+.login-container__fb-button p img, .login-container__google-button p img{
     vertical-align: bottom;
 }
 
-.login-container--google-button{
+.login-container__google-button{
     width: 450px;
     height: 48px;
     border: 1px solid #666565;
@@ -55,15 +55,15 @@
 }
 
 
-.login-container--line{
+.login-container__line{
     width: 450px;
     margin: 20px auto;
 }
-.login-container--line p{
+.login-container__line p{
     display: inline-block;    
 }
 
-.login-container--line-first, .login-container--line-second{
+.login-container__line-first, .login-container__line-second{
     border-bottom: 1px solid #D4CBCB;
     width: 215px;
 }
@@ -78,14 +78,14 @@
     text-align: center;
 }
 
-.form-container .form-container--submit{
+.form-container .form-container__submit{
     background-color: #CE0F0F;
     color: #fff;
     font-size: 16px;
     margin-top: 30px;
     cursor: pointer;
 }
-.login-container--create-account{
+.login-container__create-account{
     text-decoration: none;
     color: #CE0F0F;
 }
@@ -96,4 +96,54 @@ body{
     border-bottom: 1px solid #000;
     width: 100%;
     margin-top: 10px;
+}
+
+@media screen and (max-width: 580px) {
+    .login-container{
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+    }
+    .login-container__fb-button, .login-container__google-button{
+        width: 90%;    
+        margin: 0px auto;
+    }
+    .login-container__fb-button{
+        margin-top: 35px;
+    }
+    .login-container__google-button{
+        margin-top: 20px;
+    }
+
+    .login-container__line{
+        width: 90%;
+        display: flex;
+        margin: 20px auto;
+        flex-direction: row;
+    }
+
+    .login-container__fb-button p, .login-container__google-button p{
+        position: absolute;
+        top: 15%;
+        left: 12%;
+    }
+
+
+    .form-container {
+        width: 100%;
+        text-align: center;
+    }
+
+    .form-container label{
+        margin-left: 0;
+    }
+
+    .form-container .input{
+        width: 90%;
+        
+    }
+    .form-container .form-container__submit{
+        width: 90%;
+    }
+ 
 }
