--- a/templates/index/index.html
+++ b/templates/index/index.html
@@ -21,12 +21,11 @@
                     <a class="nav__container__menu__list__link" href="">Registrarse</a>
                 </li>
             </ul>
-            
         </div>
     </nav>
     
     <header class="header">
-        <img class="header__image" src="./image-header.png" alt="">
+        <img class="header__image" src="./image-header.webp" alt="">
     </header>
     <div class="container">
         <div class="search">
@@ -77,7 +76,7 @@
                     </div>
                 </label>
                 
-                <button class="button button--big">
+                <button class="search__form__submit">
                     <i class="fas fa-search"></i> Buscar 
                 </button>
 
@@ -86,85 +85,89 @@
         </div>
     <section>
         <div class="card">
-            <img class="card__image" src="./image-card.png" alt="">
+            <img class="card__image" src="./image-card.jpeg" alt="">
+
             <div class="card__body">
                 <h3 class="card__body__title">Título de la habitación <sub></sub></h3>
                 <h4 class="card__body__subTitle">Descripción de habitación</h4>
                 <p class="card__body__description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's.</p>
                 <p class="card__body__addres"><i class="fas fa-map-marker-alt"></i> Av. testavenida - Ciudad-Provincia-PAis</p>
                 <p class="card__body__price"><i class="fas fa-dollar-sign"></i> 123124.123</p>
+                <div class="card__body__footer">
+                    <button class="card__body__footer__button card__body__footer__button--booking">Lista de Deseos</button>
+                    <button class="card__body__footer__button">Reservar</button>
+                </div>
             </div>
-            <div class="card__footer">
-                <button class="button button--booking">Lista de Deseos</button>
-                <button class="button">Reservar</button>
-            </div>
+
         </div>
     </section>
     </div>
     <footer>
         <div class="footer__items">
-            <div class="footer__items__col">
-                <h3 class="footer__items__col__title">Asistencia</h3>
-                <ul class="footer__items__col__menu">
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Centro de Ayuda</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Información de seguridad</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Opciones de cancelación</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Nuestra respuesta ante el COVID-19</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Accesibilidad para todos</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">¿Problemas en tu localidad?</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer__items__col">
-                <h3 class="footer__items__col__title">Modo hoster</h3>
-                <ul class="footer__items__col__menu">
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Anímate a compartir tu espacio</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">protección para los hosters</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Recursos para hosters</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Visita el foro de la comunidad</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Cómo brindar servicios de hoster de forma responsable</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="footer__items__col">
-                <h3 class="footer__items__col__title">Acerca de</h3>
-                <ul class="footer__items__col__menu">
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Sala de prensa</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Más información sobre las nuevas funciones</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Carta de nuestros fundadores</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Carreras</a>
-                    </li>
-                    <li class="footer__items__col__menu__lista">
-                        <a class="footer__items__col__menu__lista__link" href="">Inversionistas</a>
-                    </li>
-                </ul>
+            <div class="footer__items__container">
+                <div class="footer__items__container__col">
+                    <h3 class="footer__items__container__col__title">Asistencia</h3>
+                    <ul class="footer__items__container__col__menu">
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Centro de Ayuda</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Información de seguridad</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Opciones de cancelación</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Nuestra respuesta ante el COVID-19</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Accesibilidad para todos</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">¿Problemas en tu localidad?</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__items__container__col">
+                    <h3 class="footer__items__container__col__title">Modo hoster</h3>
+                    <ul class="footer__items__container__col__menu">
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Anímate a compartir tu espacio</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">protección para los hosters</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Recursos para hosters</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Visita el foro de la comunidad</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Cómo brindar servicios de hoster de forma responsable</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__items__container__col">
+                    <h3 class="footer__items__container__col__title">Acerca de</h3>
+                    <ul class="footer__items__container__col__menu">
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Sala de prensa</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Más información sobre las nuevas funciones</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Carta de nuestros fundadores</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Carreras</a>
+                        </li>
+                        <li class="footer__items__container__col__menu__lista">
+                            <a class="footer__items__container__col__menu__lista__link" href="">Inversionistas</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
         <div class="footer__redes">
