--- a/src/components/service-detail/ServiceDetail.css
+++ b/src/components/service-detail/ServiceDetail.css
@@ -56,6 +56,7 @@
     height: 36px;
     border: none;
     color: #fff;
+    cursor: pointer;
 }
 .container-detail--buttons-wishes{
     width: 170px;
@@ -65,7 +66,7 @@
     margin-right: 35px;
 }
 
-@media screen and  (max-width: 1000px){
+@media screen and (max-width: 1000px){
     .slider{
         height: 70vh;
     }
