--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -1,4 +1,4 @@
-body {
+.body {
     margin: 0;
     font-family: "Ubuntu";
     font-size: 18px;
@@ -17,17 +17,17 @@ body {
 
 
 
-@media (min-width: 415px){
+@media (min-width: 700px){
 
     .title{
-        width: 1200px;
+        
         margin: auto;
         margin-bottom: 20px;
     }
     .container{
         display: grid;
         grid-template-columns: 3fr 1fr;
-        width: 1200px;
+        max-width: 1200px;
         margin: auto;
         gap: 20px;
     }
