--- a/src/components/BookingResume/BookingResume.css
+++ b/src/components/BookingResume/BookingResume.css
@@ -1,73 +1,106 @@
-
-
-
-.booking-container__resume{
-    margin-top: 30px;
-    border: 2px solid #A9A5A5;
+.booking-container__resume {
+  margin-top: 30px;
+  border: 2px solid #a9a5a5;
 }
 
 .booking-container__resume > hr {
-    width: 90%;
-    margin: auto;        
+  width: 90%;
+  margin: auto;
 }
 
-.resume__title{
-    display: flex;
-    justify-content: center;
-    padding-bottom: 40px;    
-    margin-bottom: 0px;
+.resume__title {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 40px;
+  margin-bottom: 0px;
+  text-align: center;
 }
 
-
-.resume__subtotal, .resume__igv, .resume__total{
-    display: flex;
-    justify-content: space-between;
-    margin: auto;
-    margin-bottom: 0px;
-    width: 90%;
+.resume__subtotal,
+.resume__igv,
+.resume__total {
+  display: flex;
+  justify-content: space-between;
+  margin: auto;
+  margin-bottom: 0px;
+  width: 90%;
 }
 
-.resume__price{
-    color: #D20F0F;
+.resume__price {
+  color: #d20f0f;
 }
 
-.resume__total{
-    font-weight: 700;
+.resume__total {
+  font-weight: 700;
 }
 
-.resume_button-container{
-    display: flex;
-    justify-content: center;
+.resume_button-container {
+  display: flex;
+  justify-content: center;
 }
 
-.resume__button{    
-    font-size: 22px;
-    margin: 20px 0px;
-    padding: 15px 0px;
-    width: 90%;
-    border-radius: 5px;
-    border: none;
-    background-color: #0C8A01;
-    color: #FFFFFF;    
+.resume__button {
+  font-size: 22px;
+  margin: 20px 0px;
+  padding: 15px 0px;
+  width: 90%;
+  border-radius: 5px;
+  border: none;
+  background-color: #0c8a01;
+  color: #ffffff;
 }
 
-
-
-
-
-.services{
-    margin-top: 15px;
+.services {
+  margin-top: 15px;
 }
 
-.services__description{
-    display: flex;
-    align-items: center;
-    margin-left: 36px;
-    font-size: 18px;
-    color: #524A4A;
-  
+.services__description {
+  display: flex;
+  align-items: center;
+  margin-left: 36px;
+  font-size: 18px;
+  color: #524a4a;
 }
 
 .services__description > i {
-    margin-right: 20px;    
+  margin-right: 20px;
+}
+
+@media (min-width: 700px) {
+  .booking-container__resume {
+    font-size: 14px;
+  }
+  .resume__button {
+    font-size: 16px;
+  }
+
+  .services__description {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 850px) {
+  .booking-container__resume {
+    font-size: 16px;
+  }
+  .resume__button {
+    font-size: 18px;
+  }
+
+  .services__description {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: 1000px) {
+  .booking-container__resume {
+    font-size: 20px;
+  }
+  .resume__button {
+    font-size: 22px;
+  }
+
+  .services__description {
+    font-size: 18px;
+  }
 }
