--- a/src/components/booking/Booking.css
+++ b/src/components/booking/Booking.css
@@ -1,35 +1,27 @@
 .body {
-    margin: 0;
-    font-family: "Ubuntu";
-    font-size: 18px;
+  margin: 0;
+  font-family: 'Ubuntu';
+  font-size: 18px;
 }
 
-.title{
-    margin-left: 20px;
+.title {
+  margin-left: 20px;
 }
 
-.container{
-    margin: 20px;
+.container {
+  margin: 20px;
 }
 
-
-
-
-
-
-@media (min-width: 700px){
-
-    .title{
-        
-        margin: auto;
-        margin-bottom: 20px;
-    }
-    .container{
-        display: grid;
-        grid-template-columns: 3fr 1fr;
-        max-width: 1200px;
-        margin: auto;
-        gap: 20px;
-    }
-
+@media (min-width: 700px) {
+  .title {
+    margin: auto;
+    margin-bottom: 20px;
+  }
+  .container {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    max-width: 1200px;
+    margin: auto 10px;
+    gap: 20px;
+  }
 }
