--- a/templates/admin/index.html
+++ b/templates/admin/index.html
@@ -29,16 +29,25 @@
         </form>
       </header>
       <section class="dashboard__accions">
-        <button><i class="fas fa-plus"></i> Nuevo Usuario</button>
-        <i class="far fa-user"></i>
-        <div class="totalusuarios">
-          Total de Usuarios
-          100 000
+        <div class="dashboard__addUser">
+          <button class=""><i class="fas fa-plus"></i> Nuevo Usuario</button>
         </div>
-        <div class="barra"></div>
-        <button>Activar</button>
-        <button>Editar</button>
-        <button>Eliminar</button>
+        <div class="dashboard__infocrud">
+          <i class="far fa-user dashboard__iconuser"></i>
+          <div class="dashboard__totaluser">
+            <span class="dashboard__titlenumberuser">Total de Usuarios</span>
+            <div class="dashboard__numberUser">
+              100.000
+            </div>
+          </div>
+          <div class="dashboard__barra"></div>
+          <div class="dashboard__crud">
+            <button class="dashboard__active">Activar</button>
+            <button class="dashboard__edit">Editar</button>
+            <button class="dashboard__delete">Eliminar</button>
+          </div>
+
+        </div>
       </section>
       <div class="dashboard__table">
         <div class="dashboard__table__border">
